[package]
name = "rust_py_monitor"
version = "0.1.1"
edition = "2021"
description = "High-performance Python monitoring library with Rust core"
authors = ["Roberto Lima <robertolima.izphera@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/robertolima-dev/rust-py-monitor"
keywords = ["monitoring", "metrics", "django", "fastapi", "prometheus"]
categories = ["development-tools", "web-programming"]

# 'cdylib' generates the .so/.pyd importable by Python
# 'rlib' is needed for Rust unit tests
[lib]
name = "rust_py_monitor"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
sysinfo = "0.35"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1"
# serial_test: ensures tests that share global state (static STORE)
# do not run in parallel, preventing race conditions.
serial_test = "3"
